# menu-web-server

./: .env.sample  .gitignore  Cargo.toml
resources/: 1.json  2.json  3.json
src/: js_code.rs  main.rs  menu.rs  parse_image.rs  save_menu.rs  serve_menu.rs
templates/: create_menu.html  menu.html
web/: css_util.js  dom_util.js  image_util.js  theme_coffee.css  theme_forest.css  theme_lavender.css  theme_midnight.css  theme_ocean.css  theme_olive.css  theme_pizza.css  theme_sunset.css  util_dom.js  util_menu.js  util_parsing.js  util_transitions.js
