[package]
name = "menu-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.20.0"
anyhow = "1.0.92"
actix-multipart = "0.7.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
futures-util = "0.3.31"
dotenv = "0.15.0"
md5 = "0.7.0"
